fix overflow - reduced section padding on mobile

--- a/src/components/sections/boardMembers.module.css
+++ b/src/components/sections/boardMembers.module.css
@@ -13,8 +13,6 @@
   border-radius: 2.5rem;
   padding: 3rem 2rem;
 
-  width: 27ch;
-
   display: flex;
   flex-direction: column;
 }
