--- a/src/index.css
+++ b/src/index.css
@@ -166,7 +166,7 @@ footer > div {
 }
 
 section {
-  padding: 7em 1.5em;
+  padding: 7em 1em;
   display: grid;
   justify-content: center;
 }
